--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "react": "^18",
     "react-dom": "^18",
     "react-grid-gallery": "^1.0.1-alpha.0",
+    "react-player": "^2.14.1",
     "yet-another-react-lightbox": "^3.16.0"
   },
   "devDependencies": {
